--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
   </header>
   <main class="content">
     <section class="profile page__section">
-      <div class="profile__image" style="background-image: url('6666407ac3aa5af1d5de.jpg');"></div>
+      <div class="profile__image" style="background-image: url('6666407ac3aa5af1d5de.jpg');">
+        <span class="loader-logo"></span>
+      </div>
       <div class="profile__info">
-        <h1 class="profile__title">Жак-Ив Кусто</h1>
+        <h1 class="profile__title"></h1>
+        <span class="loader-profile"></span>
         <button class="profile__edit-button" type="button"></button>
-        <p class="profile__description">Исследователь океана</p>
+        <p class="profile__description"></p>
       </div>
       <button class="profile__add-button" type="button"></button>
     </section>
@@ -29,7 +32,7 @@
   </main>
   <footer class="footer page__section">
     <p class="footer__copyright">
-      © 2021 Mesto Russia
+      © 2025 Mesto Russia
     </p>
   </footer>
 
